# robot-map-poisoning-defense

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  SETUP.md  codex_work_summary.txt  docker-compose.wslg.yml  docker-compose.xquartz.yml  docker-compose.yml  filesystem_structure.txt  filesystem_structure_explained.txt  implementation_summary.txt  runOffice.sh  work_done_summary.txt
.generated/amcl_test_map/: arena.pgm  arena.yaml
docker/: Dockerfile  compose.dri.yml  compose.wslg.yml  compose.xquartz.yml  compose.yml
docs/: TEST_WORLDS_README.md  VERIFICATION.md  context.md  equations.md  equations.md:Zone.Identifier  file_structure.md  file_verification.md  lessons_learned.md  project_plan.md  steps.md  structure.md  webots.md
install/: local_setup.sh  setup.sh
log/: latest_build
results/map_accuracy/processed/: summary_by_trial.csv
results/map_accuracy/raw/: map_accuracy_timeseries.csv
scripts/: check_ros2_stack.sh  echo_topic_once.sh  launch_everything.sh  quick_test.sh  ros_setup.bash  routeMultipleRobots.sh  runConfusingMaze.sh  runOffice.sh  runSandbox.sh  runSimpleCorridor.sh  runTestBuildingMapForRobot.sh  runTestCombineRvizMap.sh  runTestFakeObstacle.sh  runTwoRoute.sh  send_test_bridge_packet.py  start_ros2_stack.sh  verify.sh  watch_topic.sh
src/attack_node/: package.xml  setup.cfg  setup.py
src/defense_node/: setup.cfg  setup.py
src/llm_security_agent/: package.xml  setup.cfg  setup.py
src/map_sharing_msgs/: CMakeLists.txt
src/robot_patrol_msgs/: CMakeLists.txt  package.xml
src/robot_patrol_msgs/msg/: MapUpdate.msg
src/robot_patrol_node/: package.xml  setup.cfg  setup.py
src/robot_patrol_node/config/: amcl.rviz  default.rviz  map_accuracy_evaluator.yaml  map_accuracy_evaluator_two_route.yaml  multi_robot_base.rviz  multi_robot_config.json  multi_robot_robot_1_view.rviz  multi_robot_robot_2_view.rviz  multi_robot_robot_3_view.rviz  multi_robot_robot_4_view.rviz  multi_robot_shared_map.rviz  nav2_params.yaml  observer_bot_amcl.rviz  office_amcl.rviz  quick_test.rviz  route_multiple_robots_config.json  route_multiple_robots_routes.json
src/robot_patrol_node/launch/: amcl_stack.launch.py  fake_obstacle_injector.launch.py  map_builder.launch.py  mapping_stack.launch.py  multi_robot_mapping.launch.py  nav2_stack.launch.py  nav2_with_amcl.launch.py  rviz.launch.py
src/robot_patrol_node/robot_patrol_node/: attack_region_tracker.py  checkpoint_metrics_node.py  checkpoint_patrol_node.py  confidence_marker_node.py  fake_obstacle_injector_node.py  fusion_modes.py  fusion_policy.py  initial_pose_publisher_node.py  localized_pose2d_node.py  map_accuracy_evaluator_node.py  map_builder_node.py  map_evidence.py  map_merge_node.py  map_metrics.py  navigation_diagnostics_node.py  pose_to_odom_node.py  route_follower_node.py  rviz_accuracy_overlay.py  udp_bridge_node.py
src/robot_patrol_node/test/: test_map_accuracy_evaluator.py  test_user_controlled_robot_fake_obstacle.py
webots/: README.md  set_up_webots_world.md
webots/controllers/anna_bot/: anna_bot.py
webots/controllers/patrol_robot/: patrol_robot.py
webots/controllers/testRvizMap/: testRvizMap.py
webots/controllers/user_controlled_robot/: user_controlled_robot.py
webots/robot_controllers/patrol_robot/: patrol_robot.py
webots/robot_controllers/user_controlled_robot/: user_controlled_robot.py
webots/worlds/TestCombineRvizMap/: .TestCombineRvizMap.wbproj  TestCombineRvizMap.wbt
webots/worlds/TestFakeObstacle/: .TestFakeObstacle.wbproj  TestFakeObstacle.wbt  multi_robot_config.json
webots/worlds/confusingMaze/: confusing_maze.wbt
webots/worlds/office/: .office.wbproj  office.wbt  office.wbt:Zone.Identifier
(+63 files in other folders)
