<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_patrol_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for robot patrol mapping and fake obstacle updates</description>
  <maintainer email="maintainer@example.com">robot_map_poisoning_defense</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_runtime</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
